@@ -1,3 +1,10 @@
+2017-10-03 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVWriter.m
+	* DBFileWriter.m
+	* DBHTMLWriter.m
+	Initialize from superclass properly
+
 2017-10-02 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoapCSV.h
